<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ISC Trip Registrator</string>

    <string name="default_string">---</string>

    <string name="action_scan">Scan</string>
    <string name="action_manual_entry">Manual entry</string>
    <string name="action_clear">Clear</string>
    <string name="action_settings">Settings</string>

    <string name="caption_student_data">Student</string>
    <string name="caption_trips">Trips</string>

    <string name="label_first_name">First name</string>
    <string name="label_last_name">Last name</string>
    <string name="label_card_number">Card number</string>
    <string name="label_sex">Sex</string>
    <string name="label_faculty">Faculty</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unknown">Unknown</string>

    <string name="registered">Registered</string>
    <string name="not_registered">Not registered</string>
    <string name="full">Full</string>
    <string name="unlimited">Unlimited</string>

    <string name="entry_dialog_title">Manual entry</string>
    <string name="entry_dialog_message">Enter the ESN card number:</string>
    <string name="settings_dialog_title">Settings</string>
    <string name="settings_dialog_url">URL</string>
    <string name="settings_dialog_username">Username</string>
    <string name="settings_dialog_password">Password</string>
    <string name="settings_dialog_show_password">Show password</string>
    <string name="settings_dialog_unchanged">(unchanged)</string>
    <string name="load_dialog_title">Loading student data</string>
    <string name="load_dialog_message">ESN card number:</string>
    <string name="register_dialog_title">Registering for trip</string>
    <string name="register_dialog_message">Trip name:</string>
    <string name="unregister_dialog_title">Unregistering from trip</string>
    <string name="confirm_register_dialog_title">Confirm trip registration</string>
    <string name="confirm_register_dialog_student">Student</string>
    <string name="confirm_register_dialog_trip">Trip</string>
    <string name="confirm_register_dialog_yes">Register</string>
    <string name="confirm_unregister_dialog_title">Confirm trip unregistration</string>
    <string name="confirm_unregister_dialog_yes">Unregister</string>
    <string name="refresh_dialog_title">Refreshing trips</string>
    <string name="refresh_dialog_message">Refreshing&#8230;</string>

    <string name="refresh">Refresh</string>

    <string name="error_authentication">Authentication error</string>
    <string name="error_database">Database connection error</string>
    <string name="error_internal">Internal error</string>
    <string name="error_card">Card number not registered</string>
    <string name="error_connection">Internet connection error</string>

	<string name="price_czk">%1$d Kč</string>
	<string name="capacity">%1$d/%2$s</string>

</resources>
