<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/settings_dialog_url"/>

	<EditText
		android:id="@+id/settings_dialog_url"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textUri"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/settings_dialog_username"/>

	<EditText
		android:id="@+id/settings_dialog_username"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textUri"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/settings_dialog_password"/>

	<EditText
		android:id="@+id/settings_dialog_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ellipsize="start"
		android:hint="@string/settings_dialog_unchanged"
		android:inputType="textPassword"/>

	<CheckBox
		android:id="@+id/settings_dialog_show_password"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/settings_dialog_show_password"/>

</LinearLayout>
