<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.isctripregistrator.MainActivity" >

    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/action_scan"
        android:icon="@android:drawable/ic_menu_camera"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_manual_entry"
        android:orderInCategory="200"
        android:title="@string/action_manual_entry"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="300"
        android:title="@string/action_clear"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="ifRoom"/>
</menu>
